# asr-hotkey

./: IMPLEMENTATION_SUMMARY.md  README.md  REFACTORING_PLAN.md  STREAMING_MODE.md  audio_recorder.py  chunk_merger.py  holder.py  parakeet-dbus.service  parakeet_dbus.py  pyproject.toml  streaming_recorder.py  test_audio_recorder.py  test_streaming.py  toggle_script.sh  ydotoold.service
